# detected_image

./: LICENSE  README.md  db.sqlite3  manage.py  pyproject.toml  requirements.txt
django_poetry_example/: asgi.py  settings.py  urls.py  wsgi.py
for_testing/: test.py  unit_test.py
images/: models.py  serializers.py  urls.py  views.py
images/migrations/: 0001_initial.py
